--- a/5DDpart2/NetBeans/InputScreen/nbproject/project.properties
+++ b/5DDpart2/NetBeans/InputScreen/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Example_jdbc
-application.vendor=001076795
+application.title=InputScreen
+application.vendor=001084786
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,11 +25,11 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Example_jdbc.jar
+dist.jar=${dist.dir}/InputScreen.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ojdbc6.jar=ojdbc6.jar
+file.reference.ojdbc6.jar=../ojdbc6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=alessandroferro_jdbc.AlessandroFerro_jdbc
+main.class=inputscreen.InputScreen
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
